development 2.1.4d0 needed for bugfix: wrapping long URLs in ref container and tooltips to prevent layout issues; to be posted on Forum
git-svn-id: https://plugins.svn.wordpress.org/footnotes/trunk@2425397 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/public.css
+++ b/css/public.css
@@ -4,9 +4,9 @@
  * Created-Date: 15.05.14
  * Created-Time: 16:21
  * Since: 1.0
- * Version: 2.1.3
+ * Version: 2.1.4d0
  *
- * Last modified: 2020-11-24T0958+0100
+ * Last modified: 2020-11-25T0836+0100
  */
 
 
@@ -31,6 +31,26 @@ css/settings.css
 .footnotes_logo_part2,
 .footnotes_logo_part2_heading {
     color: #545f5a;
+}
+
+/*****************************************************
+Long URLs in Unicode-non-compliant user agents
+
+prevent URLs from expanding the reference container
+in mobile view, or from hanging out of the tooltip
+
+based on pattern, not link element
+class/task.php
+
+not cross-browser compatible:
+word-break: break-word;
+word-break: break-all;
+overflow-wrap: anywhere;
+word-wrap: anywhere;
+*/
+
+.footnote_url_wrap {
+    word-wrap: break-word;
 }
 
 /*****************************************************
@@ -75,9 +95,6 @@ templates/public/footnote-alternative.html
     font-size: inherit;
     font-weight: normal;
     font-style: normal;
-}
-.footnote_tooltip a {
-    word-wrap: anywhere;
 }
 
 /*
@@ -192,6 +209,7 @@ footnotes
 reference-container-body.html
 */
 .footnote_plugin_index,
+.footnote_plugin_index_combi,
 .footnote_plugin_link,
 .footnote_plugin_text {
     border:none !important;
@@ -214,7 +232,9 @@ reference-container-body.html
 These rules when enabled cause the backlink to take an overline
 when hovered in some themes, not in others:
 .footnote_plugin_index:hover,
+.footnote_plugin_index_combi:hover,
 .footnote_plugin_index.pointer:hover,
+.footnote_plugin_index_combi.pointer:hover,
 */
 .footnote_backlink:hover,
 .footnote_plugin_link:hover,
@@ -222,7 +242,8 @@ when hovered in some themes, not in others:
     text-decoration: unset;
     text-decoration: underline !important;
 }
-.footnote_plugin_index {
+.footnote_plugin_index,
+.footnote_plugin_index_combi {
     max-width: 140px;
     width: 2em;     /*auto-expanding column to fit widest*/
 }
@@ -233,25 +254,21 @@ when hovered in some themes, not in others:
 
 .footnote_index,
 .footnote_backlink,
-.footnote_plugin_index.pointer {
+.footnote_plugin_index.pointer,
+.footnote_plugin_index_combi.pointer {
     cursor: pointer;
 }
 
 .footnote_plugin_text {
     width: unset;        /*unset width of text column to fix site issues*/
 }
-/*
-prevent long URLs from expanding the reference container in mobile view:
-*/
-.footnote_plugin_text a {
-    word-wrap: anywhere;
-}
 
 /*
 Responsive
 */
 @media only screen and (max-width: 768px) {
-    .footnote_plugin_index {
+    .footnote_plugin_index,
+    .footnote_plugin_index_combi {
         max-width: 100px;
     }
 }
@@ -279,7 +296,8 @@ link styling is reverted so as to not gray out referrers/numbers.
     .footnote_plugin_tooltip_text {
         color: inherit;
     }
-    .footnote_plugin_index a {
+    .footnote_plugin_index a,
+    .footnote_plugin_index_combi a {
         color: inherit;
         text-decoration: none !important;
     }
